fix: align-items, colon

--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -5,7 +5,6 @@
   .headline {
     display: flex;
     justify-content: center;
-    align-items: bottom;
   }
 
   .container {
@@ -30,7 +29,6 @@
 
   .login-form {
     display: flex;
-    align-items: bottom;
     flex-direction: column;
     margin: 2em 0;
   }
