--- a/frontend/src/app/auth/register/register.component.scss
+++ b/frontend/src/app/auth/register/register.component.scss
@@ -114,7 +114,7 @@
   border-color: white !important;
 }
 
-:ng-deep .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) .mdc-evolution-chip__text-label {
+::ng-deep .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) .mdc-evolution-chip__text-label {
   color: white !important;
 }
 
